add new images and french

--- a/main/templates/contact.html
+++ b/main/templates/contact.html
@@ -46,6 +46,9 @@
 				</form>
 			</div>
 			<div class="col-md-6">
+				<div class="col-md-12">
+ 					<img src="{{ STATIC_URL }}images/booa_kids_outside.jpg" class="pull-left" style="margin-top: -35px; margin-left: 25px" height=300>
+ 				</div>
 				<div class="col-md-12 left-space top-space-small">
 					Département de L’Atlantique <br />
 					Commune de Ouidah, 2<sup>eme</sup> Arrondissement <br />
