--- a/main/templates/contribute.html
+++ b/main/templates/contribute.html
@@ -3,13 +3,20 @@
 	<div class="row text-container">
 		<div class="col-md-8">
 			<div class="right-space-small">
-				<h2><strong>Opportunities to contribute</strong></h2>
-				Financial and in-kind support is greatly appreciated! We are always open to new ideas, potential partnerships and volunteers.
+				<h2>
+					<strong>
+						<span class="en">Opportunities to contribute</span>
+						<span class="fr">Les Opportunites de Contribuer</span>
+					</strong>
+				</h2>
+				<span class="en">Financial and in-kind support is greatly appreciated! We are always open to new ideas, potential partnerships and volunteers.</span>
+				<span class="fr">Le soutien financier et en nature est vraiment apprécié! Nous sommes toujours ouverts a de nouvelles idées, des partenariats potentiels et des bénévoles. </span>
 				<div class="text-center top-space-small">
 	  				<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=2PWH9NN5V9DZY" type="button" class="btn btn-info btn-lg">Donate</a>
 				</div>
 				<div class="top-space-small">
-					Please feel free to <a href="{{ url_for('main.contact') }}">contact us</a> if you are interested in other donation options and opportunities.
+					<span class="en">Please feel free to <a href="{{ url_for('main.contact') }}">contact us</a> if you are interested in other donation options and opportunities.</span>
+					<span class="fr">N'hésitez pas à <a href="{{ url_for('main.contact') }}">nous contacter</a> si vous etes interesse par d’autres options et opportunités de dons.</span>
 				</div>
 			</div>
 		</div>
@@ -18,7 +25,12 @@
 	<div class="text-container">
 		<div class="row text-center top-space-small">
 			<div class="col-md-12">
-				<h2><strong>Partnerships &amp; Supporting Institutions</strong></h2>
+				<h2>
+					<strong>
+						<span class="en">Partnerships &amp; Supporting Institutions</span>
+						<span class="fr">Partenariats et Institutions de Soutien</span>
+					</strong>
+				</h2>
 			</div>
 		</div>
 		<div class="row">
@@ -26,7 +38,9 @@
 				<img src="{{ STATIC_URL }}images/logos/impact.png">
 			</div>
 			<div class="col-md-9 text-left bottom-space-small">
-				IMPACT is a Beninese organization that focuses on agricultural and health projects. 
+				IMPACT
+				<span class="en"> is a Beninese organization that focuses on agricultural and health projects.</span>
+				<span class="fr"> est une organisation béninoise qui se concentre sur les projets agricoles et de santé.</span>
 			</div>
 		</div>
 		<div class="row">
@@ -34,7 +48,9 @@
 				<img src="{{ STATIC_URL }}images/logos/roomie.png">
 			</div>
 			<div class="col-md-9 text-left bottom-space-small">
-				<a href="https://www.rumie.org/">Rumie</a> is a registered nonprofit in both the USA and Canada, and it supplies affordable tablets for refugees. BOOA uses six Rumie tablets at the school.
+				<a href="https://www.rumie.org/">Rumie</a> 
+				<span class="en">is a registered nonprofit in both the USA and Canada, and it supplies affordable tablets for refugees. BOOA uses six Rumie tablets at the school.</span>
+				<span class="fr">est une organisation à but non lucratif enregistrée aux États-Unis et au Canada, et elle fournit des tablettes abordables pour les réfugiés. BOOA utilise trois tablettes Rumie à l'école.</span>
 			</div>
 		</div>
 		<div class="row">
@@ -42,7 +58,9 @@
 				<img src="{{ STATIC_URL }}images/logos/logo_oml.png">
 			</div>
 			<div class="col-md-9 text-left bottom-space-small">
-				One Million Lights is a Palo Alto based nonprofit that fundraises and distributes solar lights. BOOA’s light solicitation can be viewed <a href="http://onemillionlights.org/blog/2016/09/23/brighten-up-bras-ouverts-open-arms-a-school-in-benin/">here</a>.
+				One Million Lights
+				<span class="en"> is a Palo Alto based nonprofit that fundraises and distributes solar lights. BOOA’s light solicitation can be viewed <a href="http://onemillionlights.org/blog/2016/09/23/brighten-up-bras-ouverts-open-arms-a-school-in-benin/">here</a>.</span>
+				<span class="fr"> est une organisation à but non lucratif basée à Palo Alto qui collecte des fonds et distribue des lampes solaires. La sollicitation légère de BOOA peut être visualisée <a href="http://onemillionlights.org/blog/2016/09/23/brighten-up-bras-ouverts-open-arms-a-school-in-benin/">ici</a></span>
 			</div>
 		</div>
 		<div class="row">
@@ -50,7 +68,9 @@
 				<img src="{{ STATIC_URL }}images/logos/cerc_social.png">
 			</div>
 			<div class="col-md-9 text-left bottom-space-small">
-				<a href="https://www.cerclesocial.org/">Cercle Social</a> is a registered nonprofit in Texas that sponsors four high schools in Benin. CS is helping to connect BOOA students with higher education opportunities because our English first language students cannot attend French only public schools.
+				<a href="https://www.cerclesocial.org/">Cercle Social</a> 
+				<span class="en"> is a registered nonprofit in Texas that sponsors four high schools in Benin. CS is helping to connect BOOA students with higher education opportunities because our English first language students cannot attend French only public schools.</span>
+				<span class="fr"> est une organisation non-gouvernementale enregistré au Texas qui parraine quatre écoles secondaires au Bénin. CS aide à relier les étudiants BOOA avec des possibilités d'éducation supérieure parce que nos étudiants en langue anglaise ne peuvent pas fréquenter les écoles publiques en français seulement.</span>
 			</div>
 		</div>
 		<div class="row">
@@ -58,7 +78,8 @@
 				<img src="{{ STATIC_URL }}images/logos/ucla.jpg">
 			</div>
 			<div class="col-md-9 text-left bottom-space-small">
-				The UCLA <a href="https://law.ucla.edu/">School of Law</a> sponsors Kathleen Bush-Joseph’s Public Service Law Fellowship with BOOA. We are developing opportunities for UCLA Law students to intern at BOOA the summer of 2017.
+				<span class="en">The UCLA <a href="https://law.ucla.edu/">School of Law</a> sponsors Kathleen Bush-Joseph’s Public Service Law Fellowship with BOOA. We are developing opportunities for UCLA Law students to intern at BOOA the summer of 2017.</span>
+				<span class="fr"><a href="https://law.ucla.edu/">L'École de droit</a> de l'UCLA sponsorise la bourse de droit de la fonction publique de Kathleen Bush-Joseph avec BOOA. Nous développons des opportunités pour les étudiants en droit de l'UCLA à stagiaires à BOOA à l'été 2017.</span>
 			</div>
 		</div>
 		<div class="row">
@@ -66,7 +87,8 @@
 				<img src="{{ STATIC_URL }}images/logos/beeck.png">
 			</div>
 			<div class="col-md-9 text-left bottom-space-small">
-				BOOA is formulating an intern placement plan for the summer of 2018 with Georgetown University’s <a href="http://beeckcenter.georgetown.edu/">Beeck Center</a> for Social Impact and Innovation.
+				<span class="en">BOOA is formulating an intern placement plan for the summer of 2018 with Georgetown University’s <a href="http://beeckcenter.georgetown.edu/">Beeck Center</a> for Social Impact and Innovation.</span>
+				<span class="fr">BOOA formule un plan de stage pour l'été 2018 avec <a href="http://beeckcenter.georgetown.edu/">le Beeck Centre</a> d'Impact Social et Innovation de l'Université de Georgetown.</span>
 			</div>
 		</div>
 		<div class="row">
@@ -74,7 +96,8 @@
 				<img src="{{ STATIC_URL }}images/logos/iheid.png">
 			</div>
 			<div class="col-md-9 text-left bottom-space-small">
-				The Swiss <a href="graduateinstitute.ch">Graduate Institute</a> for International and Development Studies and its Afrique Club provide BOOA with faculty mentoring and fundraising assistance.
+				<span class="en">The Swiss <a href="graduateinstitute.ch">Graduate Institute</a> for International and Development Studies and its Afrique Club provide BOOA with faculty mentoring and fundraising assistance.</a></span>
+				<span class="fr"><a href="graduateinstitute.ch">L’Institut</a> de Hautes Etudes Internationales et du Développement et son Afrique Club fournissent à BOOA l'assistance des mentors et de collecte de fonds.</span>
 			</div>
 		</div>
 		<div class="row">
@@ -82,7 +105,8 @@
 				<img src="{{ STATIC_URL }}images/logos/northwestern.jpg">
 			</div>
 			<div class="col-md-9 text-left bottom-space-small">
-				BOOA is exploring solar and sanitation projects with Northwestern University’s <a href="http://www.eswnu.org/">Engineers for a Sustainable World</a>.
+				<span class="en">BOOA is exploring solar and sanitation projects with Northwestern University’s <a href="http://www.eswnu.org/">Engineers for a Sustainable World</a>.</span>
+				<span class="fr">BOOA explore des projets solaires et d'assainissement avec les ingénieurs de Northwestern University <a href="http://www.eswnu.org/">pour un Monde Durable</a>.</span>
 			</div>
 		</div>
 		<div class="row">
@@ -90,7 +114,8 @@
 				<img src="{{ STATIC_URL }}images/logos/hinsdale_pl.jpg">
 			</div>
 			<div class="col-md-9 text-left bottom-space-small">
-				The <a href="http://www.hinsdalelibrary.info/">Hinsdale Public Library</a> in Illinois has donated children’s books to BOOA.
+				<span class="en">The <a href="http://www.hinsdalelibrary.info/">Hinsdale Public Library</a> in Illinois has donated children’s books to BOOA.</span>
+				<span class="fr">La <a href="http://www.hinsdalelibrary.info/">bibliothèque publique de Hinsdale</a> à Illinois a fait don de livres pour les enfants à BOOA.</a>
 			</div>
 		</div>
 		<div class="row">
@@ -98,12 +123,18 @@
 				<img src="{{ STATIC_URL }}images/logos/awesome_foundation.png">
 			</div>
 			<div class="col-md-9 text-left bottom-space-small">
-				The LA South Bay Chapter of the <a href="http://www.awesomefoundation.org/en">Awesome Foundation</a> awarded BOOA its first grant in November 2016.
+				<span class="en">The LA South Bay Chapter of the <a href="http://www.awesomefoundation.org/en">Awesome Foundation</a> awarded BOOA its first grant in November 2016.</span>
+				<span class="fr">Le chapitre LA South Bay de la <a href="http://www.awesomefoundation.org/en">Awesome Foundation</a> a décerné à BOOA sa première subvention en novembre 2016.</span>
 			</div>
 		</div>
 	</div>
 	<div class="row text-center top-space-small right-space left-space" id="supporters">
-		<h2><strong>Supporters</strong></h2>
+		<h2>
+			<strong>
+				<span class="en">Supporters</span>
+				<span class="fr">Les Supporters</span>
+			</strong>
+		</h2>
 	</div>
 	<div class="row text-center right-space left-space">
 		<div class="col-md-4 text-center">Gabriel Martinez</div>
