--- a/main/templates/projects.html
+++ b/main/templates/projects.html
@@ -84,42 +84,45 @@
 				<img src="{{ STATIC_URL }}images/booa_kids_masks.jpg" width="460">
 			</div>
 		</div>
-			<div class="row top-space-small">
-				<div class="col-md-5">
-					<img src="{{ STATIC_URL }}images/tree_table.jpg" class="pull-left paragraph-picture" style="margin-left: 0; margin-top:56px">
-				</div>
-				<div class="pull-right col-md-7">
-					<h2>
-						<strong>
-							<span class="en">Future Projects</span>
-							<span class="fr">Les Projets du Futur</span>
-						</strong>
-					</h2>
-					<h3>
-						<span class="en">We are open to requests for assistance with the following areas:</span>
-						<span class="fr">Nous sommes ouverts pour les demandes d’assistance avec les domaines suivants:</span>
-					</h3>
-					<h3>
-						<span class="en">Infrastructure Improvements</span>
-						<span class="fr">L’amelioration d’infrastructure</span>
-					</h3>
-					<ul>
-						<li>
-							<span class="en">Wells, bathrooms, classrooms, energy.</span>
-							<span class="fr">Les puits, les toilettes, les salles de classe, l’energie.</span>
-						</li>
-					</ul>
-					<h3>
-						<span class="en">Human Rights Trainings</span>
-						<span class="fr">Sensibilisation sur les droits humaines</span>
-					</h3>
-					<ul>
-						<li>
-							<span class="en">Women’s rights, children’s rights, displaced persons’ rights.</span>
-							<span class="fr">Les droits des femmes, des enfants et des personnes déplacées.</span>
-						</li>
-					</ul>
-				</div>
+		<div class="row top-space-small">
+			<div class="col-md-5">
+				<img src="{{ STATIC_URL }}images/tree_table.jpg" class="pull-left paragraph-picture" style="margin-left: 0; margin-top:56px">
+			</div>
+			<div class="pull-right col-md-7">
+				<h2>
+					<strong>
+						<span class="en">Future Projects</span>
+						<span class="fr">Les Projets du Futur</span>
+					</strong>
+				</h2>
+				<h3>
+					<span class="en">We are open to requests for assistance with the following areas:</span>
+					<span class="fr">Nous sommes ouverts pour les demandes d’assistance avec les domaines suivants:</span>
+				</h3>
+				<h3>
+					<span class="en">Infrastructure Improvements</span>
+					<span class="fr">L’amelioration d’infrastructure</span>
+				</h3>
+				<ul>
+					<li>
+						<span class="en">Wells, bathrooms, classrooms, energy.</span>
+						<span class="fr">Les puits, les toilettes, les salles de classe, l’energie.</span>
+					</li>
+				</ul>
+				<h3>
+					<span class="en">Human Rights Trainings</span>
+					<span class="fr">Sensibilisation sur les droits humaines</span>
+				</h3>
+				<ul>
+					<li>
+						<span class="en">Women’s rights, children’s rights, displaced persons’ rights.</span>
+						<span class="fr">Les droits des femmes, des enfants et des personnes déplacées.</span>
+					</li>
+				</ul>
+			</div>
+			<div class="col-md-5">
+				<img style="margin-left: 40px" src="{{ STATIC_URL }}images/project_kids_on_computers.jpg" width="460">
+			</div>
 		</div>
 	</div>
 {% endblock %}
