--- a/main/templates/vision.html
+++ b/main/templates/vision.html
@@ -39,5 +39,11 @@
 				</ul>
 			</div>
 		</div>
+		<div class="row text-center top-space-small right-space left-space" id="supporters">
+			<video width="460" height="315" controls>
+				<source src="{{ STATIC_URL }}images/grace_hopes_for_future.mp4" type="video/mp4">
+			</video>
+			<img class="left-space-tiny" style="vertical-align: baseline;" src="{{ STATIC_URL }}images/booa_vision_kids.jpg">
+		</div>
 	</div>
 {% endblock %}
