remove home image

--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 {% block body %}
 	<div class="row">
-		<div class="col-md-8 main-img-holder">
-			<img src="{{ STATIC_URL }}images/booa_main.JPG" class="img-fluid home-main-image" alt="Responsive image">
+		<div class="col-md-1 main-img-holder">
+
 		</div>
-		<div id="main-text" class="col-md-4">
+		<div class="col-md-8">
 			<h2 style="font-size: 31px;"><strong>Bras Ouverts – Open Arms</strong></h2>
 			<span class="en">
 				The main goal of Bras Ouverts – Open Arms (BOOA) is to improve the lives of marginalized communities in Benin. BOOA is based in Ouidah in the Atlantique Department of Benin.
